# deepbrowse

./: .gitignore  LICENSE  conftest.py  pyproject.toml  pytest.ini
examples/: example.py
src/deepbrowse/: __init__.py
src/deepbrowse/agent/: action_agent.py  agent.py
src/deepbrowse/agent/tests/: conftest.py  test_agent_browse.py  test_agent_search.py
src/deepbrowse/browser/: browser.py
src/deepbrowse/browser/tests/: test_browser.py  test_browser_client.py
src/deepbrowse/client/: client.py  http_client.py
src/deepbrowse/navigation/: navigate.py
src/deepbrowse/navigation/tests/: test_navigate.py
src/deepbrowse/parser/: parser.py
src/deepbrowse/parser/tests/: test_html_parser.py
src/deepbrowse/scraper/: scraper.py
