
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepbrowse"
version = "0.1.0"
description = "Deep browse and research framework."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Umer Haider", email = "umerhaider@gmail.com"}
]

# Core dependencies
dependencies = [
    "beautifulsoup4>=4.13.3",
    "browser-use>=0.1.40",
    "langchain[openai]>=0.3.22",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
